RESOLVED FIXED74209
WK2/NetscapePlugin: Incorrect mouse event coordinates when frameScaleFactor != 1.
https://bugs.webkit.org/show_bug.cgi?id=74209
Summary WK2/NetscapePlugin: Incorrect mouse event coordinates when frameScaleFactor !...
Andreas Kling
Reported 2011-12-09 13:24:36 PST
Attachments
Patch (6.16 KB, patch)
2011-12-09 13:36 PST, Andreas Kling
no flags
Patch v2 (8.70 KB, patch)
2011-12-10 16:31 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2011-12-09 13:36:33 PST
Anders Carlsson
Comment 2 2011-12-09 13:39:20 PST
Comment on attachment 118625 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=118625&action=review I think you should be able to write a plug-in test for this. Maybe platform/mac/plugins/convert-point.html could be extended to also run the same tests when there's a scale factor applied. > Source/WebKit2/WebProcess/Plugins/PluginView.cpp:-709 > - // FIXME: Just passing a translation matrix isn't good enough. I think you can keep this comment, but change it to say that we don't get the right coordinates for transformed plug-ins.
Andreas Kling
Comment 3 2011-12-10 16:31:01 PST
Created attachment 118698 [details] Patch v2 Same patch with the FIXME tweaked and a layout test.
Andreas Kling
Comment 4 2011-12-11 11:39:19 PST
Comment on attachment 118698 [details] Patch v2 Clearing flags on attachment: 118698 Committed r102540: <http://trac.webkit.org/changeset/102540>
Andreas Kling
Comment 5 2011-12-11 11:39:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.