WK2/NetscapePlugin: Incorrect mouse event coordinates when frameScaleFactor != 1. <http://webkit.org/b/74209> and <rdar://problem/10438197>

Reviewed by Anders Carlsson.

Source/WebCore:

* WebCore.exp.in: Export AffineTransform::scale(double).

Source/WebKit2:

* Shared/WebEvent.h:
* Shared/WebMouseEvent.cpp:

    Remove the WebMouseEvent "copy" constructor that applied a scale factor
    to the coordinates of an existing event.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::handleEvent):

    Pass the WebMouseEvent through to the plugin unmodified.

(WebKit::PluginView::viewGeometryDidChange):

    Plumb a complex translate+scale transform through to the plugin, so coordinate
    space transformations in will behave correctly with scale factors other than 1.

LayoutTests:

Add a test verifying that NetscapePlugins receive correctly transformed
mouse events with a page scale factor applied.

* platform/mac-wk2/plugins/mouse-events-scaled-expected.txt: Added.
* platform/mac-wk2/plugins/mouse-events-scaled.html: Added.


Canonical link: https://commits.webkit.org/90938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102540 268f45cc-cd09-0410-ab3c-d52691b4dbfc